fix: adjust font sizes and spacing

--- a/reviews.css
+++ b/reviews.css
@@ -10,22 +10,47 @@ body {
 }
 
 h1 {
-  font-size: 2.5rem !important;
+  font-size: 2rem !important;
   text-transform: capitalize;
   text-align: center !important;
+}
+
+@media screen and (max-width: 992px) {
+  h1 {
+    font-size: 1.5rem !important;
+  }
 }
 
 .review {
   max-width: 70%;
   text-align: center !important;
   margin: 0 auto;
+  height: 350px;
 }
 
 .review .text {
-  line-height: 2.30rem !important;
-  font-size: 1.75rem !important;
+  line-height: 2.3rem !important;
+  font-size: 1.5rem !important;
   font-weight: 300 !important;
   color: var(--blue);
+}
+
+@media screen and (max-width: 992px) {
+  .review .text {
+    font-size: 1.2rem !important;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .review .text {
+    font-size: 1.1rem !important;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .review .text {
+    font-size: 1rem !important;
+  }
 }
 
 .review .author {
@@ -33,6 +58,24 @@ h1 {
   font-size: 1rem !important;
   font-weight: 600 !important;
   color: var(--dark-blue);
+}
+
+@media screen and (max-width: 992px) {
+  .review .author {
+    font-size: 0.9rem !important;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .review .author {
+    font-size: 0.8rem !important;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .review .author {
+    font-size: 0.7rem !important;
+  }
 }
 
 .review .author img {
@@ -43,6 +86,12 @@ h1 {
 
 @media screen and (max-width: 1200px) {
   .review {
-    max-width: 90%;
+    max-width: 80%;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .review {
+    max-width: 95%;
   }
 }
